--- a/app/assets/javascripts/auth/register.html
+++ b/app/assets/javascripts/auth/register.html
@@ -1,31 +1,31 @@
 <div class="row form">
     <div class="col-md-6 col-md-offset-3">
-        <h1>Register</h1>
-
-        <form ng-submit="authCtrl.register()">
-              <div class="form-group">
-                  Email:
-                  <input class="form-control" type="email" placeholder="Email" ng-model="authCtrl.user.email">
-              </div>
-              <br />
-              <div class="form-group">
-                  Username:
-                  <input class="form-control" type="text" placeholder="Username" ng-model="authCtrl.user.username">
-              </div>
-              <br />
-              <div class="form-group">
-                  Password:
-                  <input class="form-control" type="password" placeholder="Password" ng-model="authCtrl.user.password">
-              </div>
-              <br />
-              <input class="btn btn-secondary" type="submit" value="Register">
-              <br />
-        </form>
-
-    </div>
-</div>
-
-<div>
-    
-</div>
+        <div class="panel panel-default">
+            <div class="panel-header">
+                <h1>Register</h1>      
+            </div>
+            <div class="panel-body">
+                <form ng-submit="authCtrl.register()">
+                      <div class="form-group">
+                          Email:
+                          <input class="form-control" type="email" placeholder="Email" ng-model="authCtrl.user.email">
+                      </div>
+                      <br />
+                      <div class="form-group">
+                          Username:
+                          <input class="form-control" type="text" placeholder="Username" ng-model="authCtrl.user.username">
+                      </div>
+                      <br />
+                      <div class="form-group">
+                          Password:
+                          <input class="form-control" type="password" placeholder="Password" ng-model="authCtrl.user.password">
+                      </div>
+                      <br />
+                      <input class="btn btn-secondary" type="submit" value="Register">
+                      <br />
+                </form>
+            </div>
+        </div> <!-- /. panel -->
+    </div><!-- /.col -->
+</div><!-- /.row -->
 
