create footer and content

--- a/app/assets/javascripts/about/about.html
+++ b/app/assets/javascripts/about/about.html
@@ -19,7 +19,7 @@
                     <li>
                       <a href="https://twitter.com/adavid128" target="_blank">
                         <span class="fa-stack fa-lg">
-                          <i class="fa fa-circle fa-stack-2x footer-icon"></i>
+                          <i class="fa fa-circle fa-stack-2x social-icon"></i>
                           <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
                         </span>
                       </a>
@@ -27,7 +27,7 @@
                     <li>
                       <a href="https://www.linkedin.com/in/agdavid" target="_blank">
                         <span class="fa-stack fa-lg">
-                          <i class="fa fa-circle fa-stack-2x footer-icon"></i>
+                          <i class="fa fa-circle fa-stack-2x social-icon"></i>
                           <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
                         </span>
                       </a>
@@ -35,7 +35,7 @@
                     <li>
                       <a href="https://github.com/agdavid" target="_blank">
                         <span class="fa-stack fa-lg">
-                          <i class="fa fa-circle fa-stack-2x footer-icon"></i>
+                          <i class="fa fa-circle fa-stack-2x social-icon"></i>
                           <i class="fa fa-github fa-stack-1x fa-inverse"></i>
                         </span>
                       </a>
