add link alternatives to Login and Register

--- a/app/assets/javascripts/auth/login.html
+++ b/app/assets/javascripts/auth/login.html
@@ -20,6 +20,9 @@
                       <br />
                 </form>
             </div>
+            <div class="panel-footer">
+              Not yet signed up? <a href="" ui-sref="home.register">Register here</a>
+            </div>
         </div><!-- /.panel -->
     </div><!-- /.col -->
 </div><!-- /.row -->
