--- a/app/assets/javascripts/auth/register.html
+++ b/app/assets/javascripts/auth/register.html
@@ -25,6 +25,10 @@
                       <br />
                 </form>
             </div>
+            <div class="panel-footer">
+              Already signed up? <a href="" ui-sref="home.login">Log in here</a>
+            </div>
+            </div>
         </div> <!-- /. panel -->
     </div><!-- /.col -->
 </div><!-- /.row -->
