--- a/app/assets/javascripts/home/home.html
+++ b/app/assets/javascripts/home/home.html
@@ -68,7 +68,7 @@
               <span class="copyright">Copyright &copy; <a href="http://antoniodavid.me/" target="_blank">Antonio David</a> 2016</span>
           </div>
           <div class="col-md-6">
-          <span>Powered by <a href="https://angularjs.org/" target="_blank">Angular</a>, <a href="http://rubyonrails.org/" target="_blank">Rails</a>, <a href="http://getbootstrap.com/2.3.2/" target="_blank">Bootstrap</a>, and education from <a href="https://flatironschool.com/" target="_blank">The Flatiron School</a></span>
+          <span>Powered by <a href="https://angularjs.org/" target="_blank">Angular</a>, <a href="http://rubyonrails.org/" target="_blank">Rails</a>, and education from <a href="https://flatironschool.com/" target="_blank">The Flatiron School</a></span>
           </div>
         </div>
     </div>
