--- a/app/assets/javascripts/states/show.html
+++ b/app/assets/javascripts/states/show.html
@@ -1,1 +1,6 @@
-<h1>Welcome to States Show</h1>
+<h1>Welcome to the {{ statesShowCtrl.stateName}} Page</h1>
+
+Breweries as follows:
+<ul>
+  <li ng-repeat="brewery in statesShowCtrl.filteredList"> {{ brewery.name }}</li>
+</ul>
