--- a/app/assets/javascripts/breweries/index.html
+++ b/app/assets/javascripts/breweries/index.html
@@ -35,7 +35,9 @@
             </div> <!-- /.panel-body-->     
             <div class="panel-footer">
                 <p><strong>Showing {{ breweriesCtrl.filteredList.length }}  Breweries <span ng-if="breweriesCtrl.searchTerm"> for the search '{{ breweriesCtrl.searchTerm }}'</span> <span ng-if="breweriesCtrl.searchState"> in the state of {{ breweriesCtrl.searchState }}</span>
-        </strong></p>
+                </strong></p>
+
+                <a href="" ng-click="breweriesCtrl.resetBreweries()"><button type="button" class="btn btn-outline btn-sm">Reset Breweries</button></a>
             </div><!-- /.panel-footer -->
         </div><!-- /.panel -->
         <hr>
